# dataiku-cloud-optimizer-agent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  test-config.yaml
.github/workflows/: ci.yml
config/samples/: development.yaml  minimal.yaml  production.yaml
docs/: contributing.md  index.md
docs/api/: core.md
docs/examples/: advanced.md  basic.md
docs/guides/: configuration.md  installation.md  integrations.md  providers.md  quickstart.md  strategies.md
dss_cloud_optimizer_plugin/: README.md  plugin.json
dss_cloud_optimizer_plugin/code-env/: desc.json
dss_cloud_optimizer_plugin/macros/run_proactive_cycle/: macro.json  python-macro.py
dss_cloud_optimizer_plugin/python-lib/dataiku_cloud_optimizer/: __init__.py  core.py  llm.py  notify.py
dss_cloud_optimizer_plugin/python-lib/dataiku_cloud_optimizer/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
dss_cloud_optimizer_plugin/python-lib/dataiku_cloud_optimizer/strategies/: __init__.py  base.py  cost_optimization.py
dss_cloud_optimizer_plugin/recipes/run_cost_optimization/: python-runner.py  recipe.json
src/dataiku_cloud_optimizer/: __init__.py  cli.py  core.py  scheduler.py  webapp.py
src/dataiku_cloud_optimizer/integrations/: __init__.py  base.py  databricks.py  dataiku.py
src/dataiku_cloud_optimizer/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
src/dataiku_cloud_optimizer/strategies/: __init__.py  base.py  cost_optimization.py
src/dataiku_cloud_optimizer/utils/: __init__.py  config.py  llm.py  notify.py
terraform/: README.md
terraform/aws/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/integration/: test_full_workflow.py
tests/unit/: test_core.py
tests/unit/integrations/: test_dataiku.py
tests/unit/providers/: test_aws.py
tests/unit/strategies/: test_cost_optimization.py
tests/unit/utils/: test_config.py
